--- a/Red_Neuronal_en_Python.ipynb
+++ b/Red_Neuronal_en_Python.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMe89lEdy0tmepowoCASJmV",
+      "authorship_tag": "ABX9TyPzhkCvoA1ohor6KmsM0ofc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,10 @@
       "source": [
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
-        "from tensorflow.keras import layers"
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras.datasets import mnist\n",
+        "import  numpy as np\n",
+        "import matplotlib.pyplot as plt"
       ],
       "metadata": {
         "id": "C_7SVhsv6lng"
@@ -278,6 +281,190 @@
       ],
       "metadata": {
         "id": "zdhieMAkDlcy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Y los pesos de las capas?"
+      ],
+      "metadata": {
+        "id": "Jqsfg9WdE6GK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "capa = layers.Dense(1)"
+      ],
+      "metadata": {
+        "id": "l-GTZaOwE3PA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "capa.weights"
+      ],
+      "metadata": {
+        "id": "1pFmiHn-FTTX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Le damos datos de entrada (vector de 1 x 3)"
+      ],
+      "metadata": {
+        "id": "TpRNcIcEGBb4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = tf.ones((1,3))\n",
+        "y = print (x)"
+      ],
+      "metadata": {
+        "id": "Z19wsNm4FYOy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = capa(x)\n",
+        "print (y)"
+      ],
+      "metadata": {
+        "id": "g9YOoWpAFgXA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "capa.weights"
+      ],
+      "metadata": {
+        "id": "29tJOuw3Fqfn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Resumen de un modelo de Red Neuronal"
+      ],
+      "metadata": {
+        "id": "gURvRRh3GLSg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = keras.Sequential(\n",
+        "    [\n",
+        "        layers.Dense(2, activation='sigmoid', name='CapaOculta1'),\n",
+        "        layers.Dense(3, activation='relu', name='CapaOculta2'),\n",
+        "        layers.Dense(4, name='Salida'),\n",
+        "    ], name = 'Mi Primera RN'\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "QD7FPVMNGVmD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x= tf.ones((1,2))\n",
+        "y = model(x)\n",
+        "print(y)"
+      ],
+      "metadata": {
+        "id": "sKA7mUACGh6Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "C3SSaHH9GhvA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.layers[0]"
+      ],
+      "metadata": {
+        "id": "ozE630UnJLZO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.layers[0].weights"
+      ],
+      "metadata": {
+        "id": "8d8UvbXhJW_W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Caso: Definir entrada en la entrada de la red neuronal..."
+      ],
+      "metadata": {
+        "id": "j3whqsR9KYQv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = keras.Sequential(\n",
+        "    [\n",
+        "        layers.Dense(2, activation='sigmoid', input_shape=(100,), name='CapaOculta1'),\n",
+        "        layers.Dense(3, activation='relu', name='CapaOculta2'),\n",
+        "        layers.Dense(4, name='Salida'),\n",
+        "    ], name = 'Mi Primera RN'\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "oAkdyfhXKVpk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "F-uKMUWQKbER"
       },
       "execution_count": null,
       "outputs": []
