Se creó con Colab

--- a/Red_Neuronal_en_Python.ipynb
+++ b/Red_Neuronal_en_Python.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPzhkCvoA1ohor6KmsM0ofc",
+      "authorship_tag": "ABX9TyOXFVVKof9NPPzN3TeLVm6L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "#Importación de Bibliotecas clave"
+      ],
       "metadata": {
         "id": "-LEOTaY86dlX"
       }
@@ -60,7 +62,7 @@
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
         "from tensorflow.keras.datasets import mnist\n",
-        "import  numpy as np\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
       "metadata": {
@@ -72,7 +74,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Método (RN) secuencial."
+        "#Cómo se crean las redes neuronales"
+      ],
+      "metadata": {
+        "id": "Wq29Tr_dLaEC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Método (RN) secuencial."
       ],
       "metadata": {
         "id": "RWSXqbpj6-RQ"
@@ -149,7 +160,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Método Funcional"
+        "###Método Funcional"
       ],
       "metadata": {
         "id": "6pIlChYv_DCU"
@@ -217,7 +228,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Método Secuencial 2.0"
+        "###Método Secuencial 2.0"
       ],
       "metadata": {
         "id": "zDt31BY1Bs5I"
@@ -288,7 +299,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Y los pesos de las capas?"
+        "#Sobre los pesos aleatorios: cuáles son al inicio"
       ],
       "metadata": {
         "id": "Jqsfg9WdE6GK"
